Drop support for Java 17-related versions Dropped support for 1.17, 1.18, 1.19 Updated Lettuce to 6.7.1 Updated Java to 21 Executors are now based on VirtualThreads pools