@@ -31,7 +31,8 @@ public class EconomyExchange {
      */
     public EconomyExchange(final RedisEconomyPlugin plugin) {
         this.plugin = plugin;
-        this.executorService = Executors.newFixedThreadPool(plugin.getConfigManager().getSettings().transactionExecutorThreads);
+        this.executorService = Executors.newFixedThreadPool(plugin.getConfigManager().getSettings().transactionExecutorThreads,
+                Thread.ofVirtual().factory());
     }
 
     /**
